Updated shop system
Left images, stats, and purchasing(deduct money,set weapons accordingly)

--- a/Assignment02/Assembly-CSharp.csproj
+++ b/Assignment02/Assembly-CSharp.csproj
@@ -46,9 +46,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\Controls.cs" />
-     <Compile Include="Assets\Scripts\PauseMenu.cs" />
-     <Compile Include="Assets\Scripts\ShopMenu.cs" />
+     <Compile Include="Assets\Scripts\GameScene\Controls.cs" />
+     <Compile Include="Assets\Scripts\GameScene\PauseMenu.cs" />
+     <Compile Include="Assets\Scripts\GameScene\ShopMenu.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
