Reload stuff / change main camera

--- a/Assignment02/Assembly-CSharp.csproj
+++ b/Assignment02/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
      <Compile Include="Assets\Scripts\GameScene\PlayerLook.cs" />
      <Compile Include="Assets\Scripts\GameScene\PlayerMovements.cs" />
      <Compile Include="Assets\Scripts\GameScene\QuitMenu.cs" />
+     <Compile Include="Assets\Scripts\GameScene\Reload.cs" />
      <Compile Include="Assets\Scripts\GameScene\ShopMenu.cs" />
      <Compile Include="Assets\Scripts\MainMenu\MenuControls.cs" />
      <Compile Include="Assets\Scripts\MainMenu\MissionSelectDetails.cs" />
