Changed Reload, added PlayerWeapons
Changed files: Reload, PlayerWeapons, PlayerFire, BulletInventory

Can now switch between two weapons

--- a/Assignment02/Assembly-CSharp.csproj
+++ b/Assignment02/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
      <Compile Include="Assets\Scripts\GameScene\PlayerFire.cs" />
      <Compile Include="Assets\Scripts\GameScene\PlayerLook.cs" />
      <Compile Include="Assets\Scripts\GameScene\PlayerMovements.cs" />
+     <Compile Include="Assets\Scripts\GameScene\PlayerWeapons.cs" />
      <Compile Include="Assets\Scripts\GameScene\QuitMenu.cs" />
      <Compile Include="Assets\Scripts\GameScene\Reload.cs" />
      <Compile Include="Assets\Scripts\GameScene\ShopMenu.cs" />
